finished app.php, and worked on main HTML

--- a/site/index.html
+++ b/site/index.html
@@ -48,25 +48,15 @@
 <body>
 	<!-- container that doesn't display initially -->
 	<div class="container" style="display: none;">
-		<!-- sticky nav bar -->
-		<nav class="main_navbar">
-			<!-- logo and action button -->
-			<a class="logo" href="./">
-				Vision
-			</a>
-			<a class="action_btn">
-				Generate Visions for a Picture
-			</a>
-		</nav>
+		<!-- title and description -->
+		<div class="topbar">
+			<h1 class="title">Vision</h1>
+			<p class="description">shed a different light to a picture.</p>
+		</div>
 
-		<!-- hero picture and action button -->
+		<!-- hero photo -->
 		<div class="hero">
 			<img src="assets/img/hero_photo.png" class="hero_photo" alt="Hero Photo">
-			<img src="assets/img/hero_photo_mobile.png" class="hero_photo_mobile" alt="Hero Photo">
-
-			<a class="action_btn">
-				Generate Visions for a Picture
-			</a>
 		</div>
 
 		<!-- app -->
@@ -96,9 +86,15 @@
 			</div>
 		</div>
 
-		<!-- footer with credit -->
+		<!-- footer with credits and links -->
 		<footer>
-			Built by <a href="https://xtrp.io/" target="_blank">Fred Adams</a>
+			<p class="credits">
+				Built by <a href="https://xtrp.io/" target="_blank">Fred Adams</a>
+			</p>
+			<ul class="links">
+				<a href="[ BLOG POST LINK ]" target="_blank">Blog Post</a>
+				<a href="https://github.com/xtrp/vision" target="_blank">GitHub</a>
+			</ul>
 		</footer>
 	</div>
 
