--- a/site/index.html
+++ b/site/index.html
@@ -73,7 +73,7 @@
 			</div>
 
 			<!-- results container -->
-			<div class="results">
+			<div class="results" style="display: none;">
 				<!-- loading symbol container -->
 				<div class="loading_container">
 					<div class="loader"></div>
@@ -86,7 +86,7 @@
 
 				<!-- actions after getting results -->
 				<button class="action_btn generate_new_visions">
-					Generate New Sets of Visions
+					Generate New Sets of Visions for Current Picture
 				</button>
 				<button class="action_btn generate_for_new_picture">
 					Generate Visions for Different Picture
