--- a/site/index.html
+++ b/site/index.html
@@ -97,7 +97,7 @@
 		<!-- footer with credits and links -->
 		<footer>
 			<p class="credits">
-				Built by <a href="https://xtrp.io/" target="_blank">Fred Adams</a>
+				Built by <a href="https://xtrp.io/" target="_blank">Gabriel Romualdo</a>
 			</p>
 			<ul class="links">
 				<a href="[ BLOG POST LINK ]" target="_blank">Blog Post</a>
